<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>haptic_device_interfaces</name>
  <version>0.1.0</version>
  <description>ROS2 package with basic messages and services for haptic device robots.</description>
  <maintainer email="jshulgac@andrew.cmu.edu">nml</maintainer>
  <license>Mozilla Public License 2.0</license>

  <depend>tf2_geometry_msgs</depend>
  <depend>geometry_msgs</depend>
  <!--<depend>std_msgs</depend>-->
  <depend>example_interfaces</depend>
  
  <buildtool_depend>ament_cmake</buildtool_depend>

  <buildtool_depend>rosidl_default_generators</buildtool_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <member_of_group>rosidl_interface_packages</member_of_group>
  
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
